Add 2022 summary post

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,5 +1,9 @@
 .navbar__logo {
-    border-radius: 50% !important;
+  border-radius: 50% !important;
+}
+
+.single__contents p {
+  margin-bottom: 0.55rem !important;
 }
 
 .theme__dark {
